@@ -2,6 +2,10 @@ Note: Please use this ChangeLog file only for merge changes (from upstream to
 this version, and the other way around). Changes to camel-lite that are
 related to Tinymail go into ../../ChangeLog
 
+2007-06-11  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* Merged with upstream Camel revision 7815
+
 2007-06-06  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Merged with upstream Camel revision 7812
